tests/harness/errors/144_str_replace_hint.eu
# Error: using Ruby/Python-style 'gsub' — 'str.replace' is the correct eucalypt function
text: "hello world"
result: text str.gsub("o", "0")
